添加factorybean 测试